# g4s_deployment

./: README.md
cs_1_config/: soma_geo_store.json  soma_message_store.json  soma_roi.json
g4s_bringup/: CMakeLists.txt  package.xml
g4s_bringup/scripts/: object_learning.tmux  start_bob.tmux
g4s_y2_routine/: CMakeLists.txt  package.xml  setup.py
g4s_y2_routine/scripts/: g4s_sim_routine.py  pre_deployment_routine.py
g4s_y2_routine/src/g4s_y2/: routine.py
